--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "@payloadcms/db-mongodb": "3.33.0",
     "@payloadcms/next": "3.33.0",
     "@payloadcms/payload-cloud": "3.33.0",
-    "@payloadcms/richtext-lexical": "^3.35.1",
+    "@payloadcms/richtext-lexical": "3.33.0",
     "cross-env": "^7.0.3",
     "graphql": "^16.8.1",
     "next": "^15.3.1",
