--- a/package.json
+++ b/package.json
@@ -19,14 +19,18 @@
     "@payloadcms/next": "3.33.0",
     "@payloadcms/payload-cloud": "3.33.0",
     "@payloadcms/richtext-lexical": "3.33.0",
+    "@tailwindcss/postcss": "^4.1.4",
     "@zapal/payload-lexical-react": "^1.8.0",
     "cross-env": "^7.0.3",
     "graphql": "^16.8.1",
+    "init": "^0.1.2",
     "next": "^15.3.1",
     "payload": "3.33.0",
+    "postcss": "^8.5.3",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "sharp": "0.32.6"
+    "sharp": "0.32.6",
+    "tailwindcss": "^4.1.4"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
